using Avalonia.Controls;

namespace Mentor4U_Avalonia.Controls;

public partial class InputControl : UserControl
{
    public InputControl()
    {
        InitializeComponent();
    }
}