// This is a personal academic project. Dear PVS-Studio, please check it.
// PVS-Studio Static Code Analyzer for C, C++, C#, and Java: https://pvs-studio.com

using Avalonia.Controls;

namespace Mentor4U_Avalonia.Views.Windows;

public partial class StartWindow : Window
{
    public StartWindow()
    {
        InitializeComponent();
    }
}